# grace

./: .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  build.py  grace.c  grace.cc
include/grace/frontend/: ast.h  lexer.h  parser.h  token.h
include/grace/utils/: string_utils.h
src/: BUILD  CMakeLists.txt
src/core/: BUILD  lexer.c  lexer.h  macros.h  memory.h  token.c  token.h
src/frontend/: CMakeLists.txt  ast.cc  lexer.cc  parser.cc  token.cc
tests/lexer/: BUILD  grace_lexer_correctness.cc  grace_lexer_memory.cc
